--- a/trunk/SourceCode/Android/android_client/res/layout/item_browser_get.xml
+++ b/trunk/SourceCode/Android/android_client/res/layout/item_browser_get.xml
@@ -3,23 +3,41 @@
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	android:orientation="horizontal">
 	<LinearLayout android:layout_height="wrap_content"
+		android:layout_marginBottom="2dp" android:layout_marginTop="2dp"
 		android:id="@+id/linearLayout1" android:layout_width="fill_parent"
 		android:gravity="center_vertical">
 		<ImageView android:src="@drawable/icon" android:scaleType="fitXY"
 			android:background="@drawable/button_bg_s" android:padding="2dp"
-			android:layout_margin="5dp" android:layout_height="80dp"
+			android:layout_marginRight="5dp" android:layout_height="80dp"
 			android:layout_width="80dp" android:id="@+id/item_browser_get_image"></ImageView>
-		<TextView android:text="TextView" android:layout_weight="1.0"
-			android:padding="5dp" android:id="@+id/item_browser_get_name"
-			android:layout_width="fill_parent" android:layout_height="fill_parent"></TextView>
-		<LinearLayout android:id="@+id/linearLayout2" android:layout_marginRight="5dp"
-			android:orientation="vertical" android:layout_width="wrap_content"
-			android:layout_height="fill_parent" android:gravity="center_vertical">
-			<TextView android:text="TextView" android:id="@+id/item_browser_get_buy"
+		<LinearLayout android:layout_height="wrap_content"
+			android:orientation="vertical" android:layout_weight="1.0"
+			android:id="@+id/linearLayout3" android:layout_width="wrap_content">
+			<TextView android:text="TextView" android:textColor="@color/black"
+				android:textStyle="bold" android:id="@+id/item_browser_get_name"
+				android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
+			<TextView android:text="TextView" android:lines="2"
+				android:id="@+id/item_browser_get_content" android:textColor="@color/black"
+				android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
+			<TextView android:text="TextView" android:id="@+id/item_browser_get_provider"
+				android:textColor="@color/black" android:layout_width="wrap_content"
+				android:layout_height="wrap_content"></TextView>
+		</LinearLayout>
+		<LinearLayout android:id="@+id/linearLayout2"
+			android:layout_marginLeft="5dp" android:orientation="vertical"
+			android:layout_width="wrap_content" android:layout_height="fill_parent"
+			android:gravity="center_vertical|center_horizontal">
+			<TextView android:text="TextView" android:textSize="13dp"
+				android:id="@+id/item_browser_get_buyer" android:textColor="@color/blue"
+				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+			<TextView android:text="TextView" android:textSize="13dp"
+				android:id="@+id/item_browser_get_buy" android:textColor="@color/red"
 				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 			<TextView android:text="TextView" android:id="@+id/item_browser_get_buyend"
+				android:textSize="13dp" android:textColor="@color/red"
 				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-			<TextView android:text="TextView" android:id="@+id/item_browser_get_date"
+			<TextView android:text="TextView" android:textSize="13dp"
+				android:id="@+id/item_browser_get_date" android:textColor="@color/black"
 				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 		</LinearLayout>
 	</LinearLayout>
